SFDC Automation/src/objects/Rental_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Rental_Aggrements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <label>Agreement Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer / Branch</label>
        <referenceTo>Customer_Branch__c</referenceTo>
        <relationshipName>Rental_Aggrements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Daily_Rate__c</fullName>
        <label>Daily Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Damage_Description__c</fullName>
        <label>Damage Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damage_Rate__c</fullName>
        <label>Damage Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Damage_Weekly_Monthly_Rate__c</fullName>
        <label>Damage Weekly Monthly Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damage__c</fullName>
        <label>Damage Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Used__c</fullName>
        <label>Days Used</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Driver_Name__c</fullName>
        <label>Driver Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Revenue__c</fullName>
        <label>Estimated Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ext_Ref_Id__c</fullName>
        <externalId>true</externalId>
        <label>Ext Ref Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FIS Account</label>
        <referenceTo>FIS_Account__c</referenceTo>
        <relationshipName>Rental_Aggrements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Liability_Description__c</fullName>
        <label>Liability Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liability_Rate__c</fullName>
        <label>Liability Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Liability_Weekly_Monthly_Rate__c</fullName>
        <label>Liability Weekly Monthly Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage_Rate__c</fullName>
        <label>Mileage Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Odometer_In__c</fullName>
        <label>Odometer In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Odometer_Out__c</fullName>
        <label>Odometer Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Odometer_Used__c</fullName>
        <label>Odometer Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pick_Up_Date__c</fullName>
        <label>Pick Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reefer_Rate__c</fullName>
        <label>Reefer Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reefer_Used__c</fullName>
        <label>Reefer Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Type__c</fullName>
        <label>Rental Type</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <label>Return Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subbed_Vehicle_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subbed Vehicle No</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipName>Rental_Aggrements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipName>Rental_Aggrements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weekly_Monthly_Rate__c</fullName>
        <label>Weekly Monthly Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Rental Agreement</label>
    <nameField>
        <label>Rental Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rental Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>